# ImageCaption

./: .gitignore  evaluate_metrics.py  pyproject.toml  train_vanilla.py
XplainKnee/: knee_metadata_test.csv  knee_metadata_train.csv  knee_metadata_val.csv  utils.py  xplainknee_dataset_class.py
